--- a/packages/mink/package.json
+++ b/packages/mink/package.json
@@ -14,5 +14,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@mink/config": "0.0.0",
+    "@mink/core": "0.0.0"
   }
 }
