--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,4 @@ cli/*
 lib
 
 *.tsbuildinfo
-{
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  }
-}
+.minkrc
