--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@mink/components": "^0.0.3"
+    "@mink/components": "^0.0.3",
+    "react": "^16.9.0"
   },
   "gitHead": "9338898a7e9f2173cd24312afea358cabfc46f6c"
 }
