--- a/packages/plugin-jira/package.json
+++ b/packages/plugin-jira/package.json
@@ -15,6 +15,8 @@
   "gitHead": "9338898a7e9f2173cd24312afea358cabfc46f6c",
   "dependencies": {
     "@mink/components": "^0.0.3",
+    "ink": "^2.4.0",
+    "react": "^16.9.0",
     "jira-connector": "^2.16.1"
   }
 }
