fix(plugin-jira): add versions and assigned issues panels

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ink": "^2.4.0",
+    "ink-spinner": "^3.0.1",
     "react": "^16.9.0"
   },
   "gitHead": "9338898a7e9f2173cd24312afea358cabfc46f6c"
